Bug 1259537 - Unbreak libc++ build after bug 1245076. r=glandium

MozReview-Commit-ID: 31otXvuDu4A